Add alerts for invalid ssl certs This patch was provided by dila in #xchat
It will show an alert on invalid certs to add
temp or permanent exceptions per server.

--- a/src/fe-gtk/fe-gtk.vcxproj.filters
+++ b/src/fe-gtk/fe-gtk.vcxproj.filters
@@ -194,6 +194,9 @@
     <ClCompile Include="xtext.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sslalert.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="hexchat.exe.manifest">
